# FIUBA-Algoritmos-y-Programacion

./: README.md
Algoritmos y Programacion II - Ejercicios/: Ejercicios Stack Queue y List.c  Ejercicios_c_practica.c  Practica Binary Tree.c  ejercicios C Structs.c  mini anotaciones.c
Algoritmos y Programacion II - Ejercicios/Data Structures/: abb.c  cola.h  heap.c  heap.h  lista.c  lista.h  pila.c  pila.h  strutil.c
Algoritmos y Programacion II - TPS/TP1/: CMakeLists.txt  calc_helper.c  calc_helper.h  dc.c  deps.mk  infix.c  pila.c  strutil.c
Algoritmos y Programacion II - TPS/TP2/: CMakeLists.txt  atender.c  atender.h  csv.c  csv.h  deps.mk  doc.csv  doctores.c  doctores.h  especialidades.c  especialidades.h  funciones_auxiliares.c  funciones_auxiliares.h  informe_doc.c  informe_doc.h  mensajes.h  pac.csv  paciente.c  paciente.h  pedir_turno.c  pedir_turno.h  zyxcba  zyxcba.c
Algoritmos y Programacion II - TPS/TP2/Data Structures/: abb.h  cola.c  hash.c  hash.h  pila.c  strutil.h
Algoritmos y Programacion II - TPS/TP3/: TDA_grafo.py  biblioteca.py  camino.py  ciclo.py  clases.py  clustering.py  entrega.mk  mensajes.py  pagerank.py  rango.py  recomendify.py
Algoritmos y programacion iii - Parcial y diagramas/: ferrocarril.asta  transporte publico.asta
Algoritmos y programacion iii - Parcial y diagramas/Parcial/: parcial.asta
